overflow bug fixed

--- a/style.css
+++ b/style.css
@@ -48,6 +48,7 @@
 body{
     background-color: white;
     height: 100vh;
+    width: 100vw;
     overflow: hidden;
 
     position: relative;
